# AutoXML

./: .gitignore  README.md  pyproject.toml
annotator/: agent_dspy.py  annotator.py  cli.py  create_project.py  interface.py  layer_splitter.py  main.py  merger.py  pipeline.py  project_ops.py  train_layer.py
annotator/dtd_parser/: dtd_lex.py  dtd_yacc.py  functions.py  grammar_DTD.cfg  larker.py  parser.out  parsetab.py
annotator/static/css/: style.css
annotator/static/js/: script.js
annotator/templates/: project_view.html
annotator/utils/: config_info.py  data.py  debug_adapter.py  logs.py  port_tools.py  span_processing.py
annotators/: dspy_main.py
annotators/dtd_parser/: dtd_lex.py  grammar_DTD.cfg  parser.out
annotators/utils/: data.py  dtd_validator.py
data/postcards/: output_postcards.xml  postcards.dtd  postcards.xml
data/postcards/raw_postcards/: pos0.txt  pos1.txt  pos10.txt  pos11.txt  pos12.txt  pos13.txt  pos14.txt  pos15.txt  pos16.txt  pos2.txt  pos3.txt  pos4.txt  pos5.txt  pos6.txt  pos7.txt  pos8.txt  pos9.txt  test000.txt  test001.txt  test002.txt  test003.txt  test004.txt  test005.txt  test006.txt  test007.txt  test008.txt  test009.txt  test010.txt  test011.txt  test012.txt  test013.txt  test014.txt  test015.txt  test016.txt
data/resumes/: resumes.xml
data/resumes/raw_resumes/: test000.txt  test001.txt  test002.txt  test003.txt  test004.txt  test005.txt  test006.txt  test007.txt  test008.txt  test009.txt  test010.txt  test011.txt  (+9 more)
data/resumes_section/: resumes_section.dtd  resumes_section.xml
model_configs/: spacy_trf.cfg
(+20 files in other folders)
