[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoxml"
version = "0.1.0"
description = "A CLI tool to manage XML annotation projects"
authors = [
    { name="Tomas Araujo", email="a95833@alunos.uminho.pt" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spacy",
	"spacy-transformers",
    "dspy",
	"Flask",
	"lxml",
	"platformdirs",
	"ply",
	"RapidFuzz"
]

[project.scripts]
autoxml = "annotator.cli:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["annotator*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
annotator = [
    "templates/*.html",
    "static/*",
    "static/**/*",
	"../model_configs/*.cfg"
]

